# nscl-mobilerobot-ros

./: DEADJOE  README.md
img/ros_graph/: nscl.pgm  nscl.yaml
nscl/nscl/: CMakeLists.txt  package.xml
nscl/nscl_bringup/: CMakeLists.txt  package.xml
nscl/nscl_bringup/launch/: nscl_core.launch  nscl_model.launch  nscl_remote.launch  nscl_robot.launch
nscl/nscl_bringup/launch/includes/: description.launch.xml
nscl/nscl_bringup/src/: nscl_diagnostics.cpp
nscl/nscl_description/: CMakeLists.txt  package.xml
nscl/nscl_description/urdf/: nscl.gazebo.xacro  nscl.urdf.xacro  sonar_sensor.urdf.xacro
nscl/nscl_navigation/: CMakeLists.txt  package.xml
nscl/nscl_navigation/launch/: amcl.launch.xml  nscl_nav_simul.launch  nscl_navigation.launch
nscl/nscl_navigation/maps/: hitech.pgm  hitech.yaml
nscl/nscl_navigation/normal_param/: local_costmap_params.yaml
nscl/nscl_navigation/param/: base_local_planner_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  inflater_costmap_params.yaml  inflater_global_costmap_params.yaml
nscl/nscl_navigation/rviz/: nscl_nav.rviz
nscl/nscl_navigation/simul_param/: sonar_costmap_params.yaml
nscl/nscl_navigation/sonar_param/: sonar_costmap_params.yaml
nscl/nscl_slam/: CMakeLists.txt  package.xml
nscl/nscl_slam/launch/: nscl_slam.launch  nscl_slam_sick561.launch
nscl/nscl_slam/rviz/: nscl_slam.rviz
nscl/nscl_teleop/: CMakeLists.txt  package.xml
nscl/nscl_teleop/launch/: nscl_teleop_key.launch
nscl/nscl_teleop/scripts/: nscl_teleop_key
nscl_autonomous_driving/autonomous_navigation/: CMakeLists.txt  package.xml
nscl_autonomous_driving/autonomous_navigation/include/autonomous_navigation/: nsclControl.h  nsclStatus.h  nscl_navigation.h
nscl_autonomous_driving/autonomous_navigation/src/: movementNode.cpp  nsclControl.cpp  nsclStatus.cpp  nscl_navigation.cpp  simple_navigation_goals.cpp
nscl_autonomous_driving/map_tf/: package.xml
nscl_autonomous_driving/map_tf/src/: frame_tf2_broadcaster.cpp
nscl_msgs/: CMakeLists.txt  package.xml
nscl_simulation/nscl_gazebo/: CMakeLists.txt  package.xml
nscl_simulation/nscl_gazebo/launch/: nscl_empty_world.launch  nscl_with_tf.launch
sick_tim/launch/: .sick_tim551_2050001.launch.swp  sick_mrs1000.launch  sick_tim551_2050001.launch
sick_tim/urdf/: sick_tim.urdf.xacro
zetabank/: README.md
zetabank/zetabank/: CMakeLists.txt  package.xml
zetabank/zetabank_bringup/: CMakeLists.txt  package.xml
zetabank/zetabank_bringup/launch/: zetabank_core.launch  zetabank_model.launch  zetabank_remote.launch  zetabank_robot.launch
zetabank/zetabank_bringup/launch/includes/: description.launch.xml
zetabank/zetabank_bringup/scripts/: create_udev_rules
zetabank/zetabank_bringup/src/: zetabank_diagnostics.cpp
zetabank/zetabank_description/: CMakeLists.txt  package.xml
zetabank/zetabank_description/urdf/: sonar_sensor.urdf.xacro  zetabank.gazebo.xacro  zetabank.urdf.xacro
zetabank/zetabank_example/: CMakeLists.txt  package.xml
zetabank/zetabank_example/launch/: interactive_markers.launch  zetabank_pointop_key.launch
zetabank/zetabank_example/rviz/: zetabank_interactive.rviz
zetabank/zetabank_example/src/: zetabank_marker_server.cpp
zetabank/zetabank_navigation/: CMakeLists.txt  package.xml
zetabank/zetabank_navigation/fast_param/: dwa_local_planner_params.yaml  local_costmap_params.yaml
zetabank/zetabank_navigation/launch/: coex_navigation.launch  fast_navigation.launch  normal_navigation.launch  slow_navigation.launch  sonar_navigation.launch  total_navigation.launch  zetabank_navigation.launch
zetabank/zetabank_navigation/maps/: coex.pgm  coex.yaml  map.yaml
zetabank/zetabank_navigation/normal_param/: dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml
zetabank/zetabank_navigation/param/: local_costmap_params.yaml  move_base_params.yaml  sonar_costmap_params.yaml
zetabank/zetabank_navigation/simul_param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  inflater_global_costmap_params.yaml  local_costmap_params.yaml
zetabank/zetabank_navigation/slow_param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
zetabank/zetabank_navigation/sonar_param/: base_local_planner_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  inflater_costmap_params.yaml  inflater_global_costmap_params.yaml  local_costmap_params.yaml
zetabank/zetabank_slam/: CMakeLists.txt  package.xml
zetabank/zetabank_slam/launch/: zetabank_slam.launch  zetabank_slam_sick561.launch
zetabank/zetabank_teleop/: CMakeLists.txt  package.xml
zetabank/zetabank_teleop/launch/: zetabank_teleop_key.launch
zetabank/zetabank_teleop/scripts/: zetabank_teleop_key
zetabank_autonomous_driving/autonomous_navigation/: CMakeLists.txt  package.xml
zetabank_autonomous_driving/autonomous_navigation/src/: initializeAMCLParticles.cpp  movementNode.cpp  zetabotControl.cpp  zetabotStatus.cpp  zetabot_navigation.cpp
zetabank_autonomous_driving/map_tf/: CMakeLists.txt
zetabank_autonomous_driving/map_tf/launch/: start_demo.launch
zetabank_autonomous_driving/map_tf/src/: frame_tf2_listener.cpp
zetabank_communication/: CMakeLists.txt  package.xml
zetabank_communication/launch/: total_server.launch  zetabank_server.launch
zetabank_communication/scripts/: client.py  server.py  zetabank_server.py
zetabank_msgs/: CMakeLists.txt  package.xml
zetabank_msgs/msg/: CommInfo.msg
zetabank_msgs/srv/: CmdInfo.srv
zetabank_simulation/zetabank_fake/: CMakeLists.txt  package.xml
zetabank_simulation/zetabank_fake/include/zetabank_fake/: zetabank_fake.h
zetabank_simulation/zetabank_fake/launch/: zetabank_fake.launch
zetabank_simulation/zetabank_fake/src/: zetabank_fake.cpp
zetabank_simulation/zetabank_gazebo/: CMakeLists.txt  package.xml
zetabank_simulation/zetabank_gazebo/launch/: zetabank_with_tf.launch
zetabank_simulation/zetabank_gazebo/src/: gazebo_ros_zetabank.cpp
(+6 files in other folders)
