<?xml version="1.0"?>
<package>
  <name>nscl_teleop</name>
  <version>0.1.0</version>
  <description>
    Provides teleoperation using keyboard for nscl
  </description>
  <author email="gunhee6392@gmail.com">Geonhee</author>
  <maintainer email="gunhee6392@gmail.com">Geonhee</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
