<?xml version="1.0"?>
<package>
  <name>zetabank</name>
  <version>0.1.0</version>
  <description>
    ROS packages for the zetabank (meta package)
  </description>
  <license>Apache License 2.0</license>
  <author email="gunhee6392@gmail.com">Geonhee</author>
  <maintainer email="gunhee6392@gmail.com">Geonhee</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>zetabank_bringup</run_depend>
  <run_depend>zetabank_description</run_depend>
  <run_depend>zetabank_navigation</run_depend>
  <run_depend>zetabank_slam</run_depend>
  <run_depend>zetabank_teleop</run_depend>
  <export><metapackage/></export>
</package>
