<?xml version="1.0"?>
<package>
  <name>zetabank_navigation</name>
  <version>0.1.0</version>
  <description>The zetabank navigation package</description>
  <license>Apache License 2.0</license>
  <author email="gunhee6392@gmail.com">Geonhee</author>
  <maintainer email="gunhee6392@gmail.com">Geonhee</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>amcl</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>move_base</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
</package>
