<?xml version="1.0"?>
<package>
  <name>zetabank_slam</name>
  <version>0.1.0</version>
  <description>
    The _zetabank_slam package provides SLAM function
  </description>
  <license>Apache License 2.0</license>
  <author email="gunhee6392@gmail.com">Geonhee</author>
  <maintainer email="gunhee6392@gmail.com">Geonhee</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>zetabank_bringup</run_depend>
  <run_depend>gmapping</run_depend>
</package>
